fix avatar
I fixed the avatar here as in the mobile view it is not showing as I wanted it to be shown it.

--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ input[type=submit] {
 
 @media screen and (max-width: 768px) {
     .help {
-        width: 60%;
+        width: 80%;
         margin-top: 8%;
 
     }
